test/kubernetes/e2e/features/agentgateway/zero_downtime_rollout/testdata/agentgateway.yaml
kind: GatewayParameters
apiVersion: gateway.kgateway.dev/v1alpha1
metadata:
  name: kgateway
spec:
  kube:
    agentGateway:
      enabled: true
      logLevel: trace
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: agentgw
spec:
  gatewayClassName: agentgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-agentgateway-route
spec:
  parentRefs:
    - name: agentgw
      namespace: default
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: example-svc
          port: 8080
